Kube/2.3/dep-ng-mu.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2app
  labels:
    app: mu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mu
  template:
    metadata:
      labels:
        app: mu
    spec:
      containers:
      - name: multi
        image: wbitt/network-multitool
        ports:
        - containerPort: 8888
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-vol
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-vol
        configMap:
          name: nginx-index
