Kube/2.3/dep-ng.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 1app
  labels:
    app: ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngx
  template:
    metadata:
      labels:
        app: ngx
    spec:
      containers:    
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-vol
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-vol
        configMap:
          name: nginx-index2
