Kube/2.3/service-nx.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nx
spec:
  selector:
    app: mu
  ports:
  - port: 80
    targetPort: 80
