Kube/2.3/svc-nx.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-nx
spec:
  selector:
    app: ngx
  ports:
  - port: 80
    targetPort: 80
