Kube/2.3/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - tuktuk.com
    secretName: nx-tls
  rules:
  - host: tuktuk.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-nx
            port:
              number: 80
